--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL       = "https://nws-portfolio-starter.netlify.app"
+baseURL       = "oswaldchartrainnws.netlify.app"
 languageCode  = "fr-FR"
 title         = "Roxo | NWS portfolio starter theme"
 theme         = "roxo"
