--- a/config.toml
+++ b/config.toml
@@ -8,11 +8,11 @@ summarylength = 25
 [menu]
   # Navbar Menus
   [[menu.nav]]
-    name    = "Home"
+    name    = "Accueil"
     url     = ""
     weight  = 1
   [[menu.nav]]
-    name    = "About"
+    name    = "À propos"
     url     = "about"
     weight  = 2
   [[menu.nav]]
@@ -24,7 +24,7 @@ summarylength = 25
     url     = "blog"
     weight  = 4
   [[menu.nav]]
-    name    = "Get in touch"
+    name    = "Contact"
     url     = "contact"
     weight  = 5
 
