--- a/config.toml
+++ b/config.toml
@@ -20,10 +20,13 @@ summarylength = 25
     url     = "portfolio"
     weight  = 3
   [[menu.nav]]
+    name    = ""
+    url     = ""
+    weight  = 4
   [[menu.nav]]
     name    = "Contact"
     url     = "contact"
-    weight  = 4
+    weight  = 5
 
 # Site Params
 [params]
