--- a/config.toml
+++ b/config.toml
@@ -45,7 +45,7 @@ summarylength = 25
   # Navbar Action Button
   [params.navAction]
     status  = true
-    name    = "Get in touch"
+    name    = "Contact"
     url     = "contact"
   
 
@@ -55,23 +55,23 @@ summarylength = 25
     background_image      = "images/backgrounds/hero-background.jpg"
     heading               = "We’re a Design Studio That Belies In the Great Ideas"
     tagline               = "WE WORK HARD, WE PLAY HARD"
-    primary_button        = "See Our Works"
+    primary_button        = "Voir mes travaux"
     primary_button_url    = "portfolio"
-    secondary_button      = "Connect with Us"
+    secondary_button      = "Contactez moi !"
     secondary_button_url  = "contact"
 
   [params.portfolio]
     enable    = true
-    title     = "OUR RECENT WORKS"
-    subtitle  = "Crafting experiences and seeking to make the complex clear & beautiful."
+    title     = "MES DERNIERS TRAVAUX"
+    subtitle  = "dab"
 
   [params.call_to_action]
     enable              = true
     background_image    = "images/backgrounds/cta-background.jpg"
-    title               = "LET’S WORK TOGETHER"
-    primary_button      = "Submit Query"
+    title               = "TRAVAILLONS ENSEMBLE"
+    primary_button      = "Soumettre une requête"
     primary_button_url  = "contact"
-    secondary_button    = "Not Convinced"
+    secondary_button    = "Pas convaincu ?"
     secondary_button_url = "portfolio"
 
   [params.footer]
